# range-view-3d-detection

./: .gitignore  README.md  pyproject.toml  setup.cfg
conda/: environment.yml  install.sh
conf/: config.yaml
conf/dataset/: av2.yaml  nuscenes.yaml  waymo.yaml
conf/experiment/: base-av2.yaml  base-waymo.yaml  base.yaml  rv-av2.yaml  rv-waymo.yaml
conf/model/: baseline.yaml  range_view.yaml
conf/trainer/: train.yaml
converters/: README.md
converters/av2/: export.py  utils.py
converters/waymo/: export.py  utils.py
scripts/: debug-overfit.sh  grid.sh  overcap.sh  resume.py  resume.sh  short.sh  train.py  train.sh
src/torchbox3d/: __init__.py
src/torchbox3d/datasets/: __init__.py  datamodule.py  dataset.py
src/torchbox3d/datasets/argoverse/: av2.py  constants.py  utils.py
src/torchbox3d/evaluation/: evaluate.py
src/torchbox3d/math/: conversions.py  kernels.py  polytope.py  range_view.py
src/torchbox3d/math/numpy/: conversions.py
src/torchbox3d/math/ops/: assignment.py  cluster.py  coding.py  dist.py  index.py  iou.py  nms.py
src/torchbox3d/nn/arch/: detector.py
src/torchbox3d/nn/backbones/: dla.py  resnet.py
src/torchbox3d/nn/blocks/: __init__.py
src/torchbox3d/nn/decoders/: range_decoder.py
src/torchbox3d/nn/functional/: __init__.py
src/torchbox3d/prototype/: loader.py
src/torchbox3d/rendering/: tensorboard.py
src/torchbox3d/structures/: cuboids.py  data.py  grid.py  meta.py  sparse_tensor.py  targets.py
src/torchbox3d/utils/: collater.py  hydra.py  io.py  polars.py  wandb.py
tools/: benchmark.py  draw_utils.py
(+10 files in other folders)
